--- a/src/styles/FAQAccordion.css
+++ b/src/styles/FAQAccordion.css
@@ -20,7 +20,7 @@
   font-size: 14px;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s ease-in-out;
+  transition: 1s ease-in-out;
 }
 
 .accordion-item.active .accordion-header {
