--- a/src/app/admin/globals.scss
+++ b/src/app/admin/globals.scss
@@ -237,3 +237,20 @@ pre {
 #cryptoNews-table td a:hover {
   color: rebeccapurple !important;
 }
+
+
+.selectpicker option,
+select.selectpicker {
+  border: none;
+  background-color: white;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  color: #14B1B2;
+  font-weight: bold;
+  font-size: 30px;
+  margin: 0;
+  padding-left: 0;
+  margin-top: -20px;
+  background: none;
+}
