--- a/src/styles/ico.css
+++ b/src/styles/ico.css
@@ -58,7 +58,7 @@
 }
 
 .active-tab {
-    background-color:#0d6efd !important;
+    background-color:#08233f !important;
     color: white !important;
 }
 
